fixed tooltips on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -577,45 +577,11 @@ select#focusSceneSelect.active {
 }
 
 .tooltip .tooltiptext {
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 1rem;
-  visibility: hidden;
-  color: var(--text-color);
-  font-weight: 400;
-  letter-spacing: normal;
-  background: #000;
-  border-radius: 0 .125rem .125rem;
-  line-height: 1rem;
-  margin: .7rem 0 0;
-  padding: .375rem .5rem;
-  position: absolute;
-  bottom: auto;
-  top: 100%;
-  left: 50%;
-  right: auto;
-  opacity: 0;
-  -webkit-transition: opacity .3s linear;
-  transition: opacity .3s linear;
-  white-space: normal;
-  z-index: 1070;
+  display: none;
 }
 
 .tooltip .tooltiptext::after {
-  position: absolute;
-  top: -.35rem;
-  left: 0;
-  bottom: auto;
-  right: auto;
-  content: "";
-  border-left: .25rem solid #000;
-  border-bottom: .2rem solid #000;
-  border-right: .25rem solid transparent;
-  border-top: .2rem solid transparent;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
+  display: none;
 }
 
 .editpane {
@@ -638,7 +604,7 @@ select#focusSceneSelect.active {
 }
 
 #codex-editor .codex-editor .ce-block i {
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 #codex-editor .codex-editor .ce-block__content {
@@ -674,7 +640,7 @@ select#focusSceneSelect.active {
   font-size: 1.5rem;
   cursor: pointer;
   margin-bottom: 2rem;
-  z-index: 99;
+  z-index: 8;
 }
 
 .toolbar > * {
@@ -705,6 +671,12 @@ select#focusSceneSelect.active {
   }
 }
 
+@media (min-width: 651px) {
+  .codex-editor--narrow .codex-editor__redactor {
+    margin: 0;
+  }
+}
+
 @media (min-width: 1200px) {
   .editpane {
     padding: 10px;
@@ -715,7 +687,7 @@ select#focusSceneSelect.active {
     line-height: 2.5rem;
   }
   #codex-editor .codex-editor {
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'IBM Plex Mono', monospace;
     color: var(--editor-color);
     font-weight: 400;
     font-size: 0.9rem;
@@ -865,6 +837,51 @@ select#focusSceneSelect.active {
     border-radius: 1rem;
     bottom: 1rem;
     right: 1rem;
+  }
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    overflow: visible;
+  }
+  .tooltip .tooltiptext {
+    display: initial;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 1rem;
+    visibility: hidden;
+    color: var(--text-color);
+    font-weight: 400;
+    letter-spacing: normal;
+    background: #000;
+    border-radius: 0 .125rem .125rem;
+    line-height: 1rem;
+    margin: .7rem 0 0;
+    padding: .375rem .5rem;
+    position: absolute;
+    bottom: auto;
+    top: 100%;
+    left: 50%;
+    right: auto;
+    opacity: 0;
+    -webkit-transition: opacity .3s linear;
+    transition: opacity .3s linear;
+    white-space: normal;
+    z-index: 1070;
+  }
+  .tooltip .tooltiptext::after {
+    position: absolute;
+    top: -.35rem;
+    left: 0;
+    bottom: auto;
+    right: auto;
+    content: "";
+    border-left: .25rem solid #000;
+    border-bottom: .2rem solid #000;
+    border-right: .25rem solid transparent;
+    border-top: .2rem solid transparent;
+  }
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
   }
 }
 
